; ModuleID = '/home/carl/AnghaBench/radare2/doc/extr_indent-example.c_main.c'
source_filename = "/home/carl/AnghaBench/radare2/doc/extr_indent-example.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_10__ = type { i32 }

@core = common dso_local global %struct.TYPE_9__* null, align 8
@fcn = common dso_local global %struct.TYPE_10__* null, align 8
@input = common dso_local global i32* null, align 8
@seek = common dso_local global i32 0, align 4
@help_msg_aft = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 1
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** @fcn, align 8
  %12 = icmp ne %struct.TYPE_10__* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** @fcn, align 8
  %15 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  br label %21

17:                                               ; preds = %2
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  br label %21

21:                                               ; preds = %17, %13
  %22 = phi i32 [ %16, %13 ], [ %20, %17 ]
  %23 = call i32 @r_anal_esil_set_pc(i32 %10, i32 %22)
  %24 = load i32*, i32** @input, align 8
  %25 = load i32, i32* %24, align 4
  switch i32 %25, label %55 [
    i32 0, label %26
    i32 63, label %54
  ]

26:                                               ; preds = %21
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* @seek, align 4
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 1
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** @fcn, align 8
  %36 = icmp ne %struct.TYPE_10__* %35, null
  br i1 %36, label %37, label %41

37:                                               ; preds = %26
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** @fcn, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  br label %45

41:                                               ; preds = %26
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %43 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  br label %45

45:                                               ; preds = %41, %37
  %46 = phi i32 [ %40, %37 ], [ %44, %41 ]
  %47 = call i32 @r_anal_esil_set_pc(i32 %34, i32 %46)
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** @fcn, align 8
  %50 = call i32 @r_core_anal_type_match(%struct.TYPE_9__* %48, %struct.TYPE_10__* %49)
  %51 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %52 = load i32, i32* @seek, align 4
  %53 = call i32 @r_core_seek(%struct.TYPE_9__* %51, i32 %52, i32 1)
  br label %59

54:                                               ; preds = %21
  br label %55

55:                                               ; preds = %21, %54
  %56 = load %struct.TYPE_9__*, %struct.TYPE_9__** @core, align 8
  %57 = load i32, i32* @help_msg_aft, align 4
  %58 = call i32 @r_core_cmd_help(%struct.TYPE_9__* %56, i32 %57)
  br label %59

59:                                               ; preds = %55, %45
  ret i32 0
}

declare dso_local i32 @r_anal_esil_set_pc(i32, i32) #1

declare dso_local i32 @r_core_anal_type_match(%struct.TYPE_9__*, %struct.TYPE_10__*) #1

declare dso_local i32 @r_core_seek(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @r_core_cmd_help(%struct.TYPE_9__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
